# redfive

./: .gitignore  Dockerfile  GOOGLE_AUTH_SETUP.md  pyproject.toml
resources/models/: project.yaml
resources/models/upstream/: og_asset.yaml  og_calendar.yaml  og_county.yaml  og_daily_downtime.yaml  og_daily_forecast.yaml  og_daily_production.yaml  og_downtime_reason.yaml  og_downtime_type.yaml  og_formation.yaml  og_production_area.yaml  og_state.yaml  og_well.yaml
resources/schemas/: ai-response.schema.json  chart.schema.json  model.schema.json  project.schema.json  saved-query.schema.json  sql-examination.schema.json  sql-generation.schema.json
resources/templates/: postgres.j2  snowflake.j2
src/: __init__.py  auth.py  core.py  embeddings.py  logging_config.py  main.py  main_api.py  main_mcp.py  middleware.py  queries.py  rag.py  service_types.py
src/stuff/: ddl.py  model_extractor.py
src/utils/: ddl.py  model_extractor.py
