[project]
name = "redfive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1",
    "jinja2>=3.1.6",
    "jsonschema>=4.25.1",
    "mcp>=1.0.0",
    "networkx>=3.5",
    "openai>=2.5.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.44",
    "sqlparse>=0.5.3",
    "uvicorn>=0.24.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
]

[project.scripts]
redfive = "src.main:app"
